**  denotes quite substantial/important changes
*** denotes really big changes 
ISSUES:

* vis.gam ignores offset?

* s(x,by=id,id=1) for gamm/4

* Point processes....

* Integrate out selected terms in ML/REML...

* REML estimation can fail when estimating scale, with extreme weights.
  Rescaling weights works!

* gamm4 isn't handling NA's properly with formulae like y~factor(z). 
  When inserting z into dataframe, it fails to drop. It (like gamm) can
  also run out of memory when computing the cov matrix, if dataset is large 
  with few levels of random factor...

* current sparse code uses geometry library for Delaunay tesselation.
  Have to code a replacement if released.

1.7-7

unstable

* gam.fit3 bug. Could fail on immediate divergence as null.eta was matrix.

* slanczos bug fixes --- could segfault if k negative. Could also fail to 
  return correct values when k small and kl < 0 (due to a convergence 
  testing bug, now fixed)

* gamm bug --- could fail if only smooth was a fixed one, by looking for
  non-existent sp vector. fixed.

* 'cc' Predict.matrix bug fix - prediction failed for single points.

* summary.gam failed for single coefficient random effects. fixed.

* gam returns rV, where t(rV)%*%rV*scale is Bayesian cov matrix.
 
1.7-6

** factor `by' variable handling extended: if a by variable is an
   ordered factor then the first level is treated as a reference level
   and smooths are only generated for the other levels. This is useful 
   for avoiding identifiability issues in complex models with factor by 
   variables. 

* bam bug fix. aic was reported incorrectly (too low). 

1.7-5

* gam.fit3 modified to converge more reliably with links that don't guarantee
  feasible mu (e.g poisson(link="identity")). One vulnerability removed + a
  new approach taken, which restarts the iteration from null model 
  coefficients if the original start values lead to an infinite deviance.

* Duchon spline bug fix (could fail to create model matrix if 